# pySigma-backend-opensearch

./: OPENSEARCH_PPL_README.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
sigma/backends/opensearch/: __init__.py  opensearch.py  opensearch_ppl.py
sigma/pipelines/opensearch/: __init__.py  opensearch.py
tests/: test_backend_opensearch.py  test_backend_opensearch_connect.py  test_backend_opensearch_ppl.py
