[tool.poetry]
name = "pySigma-backend-opensearch"
version = "1.0.2"
description = "pySigma OpenSearch backend"
readme = "README.md"
authors = ["Hendrik Baecker <hendrik.baecker@dcso.de>"]
license = "LGPL-3.0-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-opensearch"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma-backend-elasticsearch = "^1.1.0"
pysigma = ">=0.10.2, <0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3,<9.0"
pytest-cov = ">=4,<6"
coverage = ">=6.4.1,<8.0.0"
requests = "^2.28.1"
autopep8 = "^2.0.2"
pylint = ">=2.17.2,<4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-module-docstring,line-too-long,too-many-lines"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "-vv --cov=sigma --cov-report term --cov-report xml:cov.xml"
testpaths = [
    "tests",
]
