[tool.poetry]
name = "pySigma-backend-opensearch"
version = "2.0.0"
description = "pySigma OpenSearch backend"
readme = "README.md"
authors = ["Hendrik Baecker <hendrik.baecker@dcso.de>"]
license = "LGPL-3.0-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-opensearch"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pysigma-backend-elasticsearch = "^2.0"
pysigma = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"
coverage = "^7.0"
requests = "^2.32"
autopep8 = "^2.3"
pylint = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-module-docstring,line-too-long,too-many-lines"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "-vv --cov=sigma --cov-report term --cov-report xml:cov.xml"
testpaths = [
    "tests",
]
