[project]
name = "pySigma-backend-opensearch"
version = "2.0.1"
description = "pySigma OpenSearch backend"
readme = "README.md"
authors = [
    { name = "Hendrik Baecker", email = "hb@process-zero.de" }
]
license = "LGPL-3.0-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-opensearch"

dependencies = [
    "pysigma-backend-elasticsearch (>= 1.1.3)",
    "pysigma (>=1.0.0,<2.0.0)"
]
requires-python = "<4.0,>=3.10"

[tool.poetry]
packages = [
    { include = "sigma" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"
coverage = "^7.0"
requests = "^2.32"
autopep8 = "^2.3"
pylint = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-module-docstring,line-too-long,too-many-lines"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "-vv --cov=sigma --cov-report term --cov-report xml:cov.xml"
testpaths = [
    "tests",
]
